Fix class name, added container to index.html and set up a responsive layout

--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -2,17 +2,17 @@
 .container {
   margin: 0 auto;
   padding: 0 15px;
-  width: $mobile;
+  max-width: 100%;
 
-  // for tablets
+  // // for tablets
 
-  @media screen and(min-width: $tablet) {
-    width: $tablet;
-  }
+  // @media screen and(min-width: $tablet) {
+  //   width: $tablet;
+  // }
 
-  // for desktop
+  // // for desktop
 
-  @media screen and(min-width: $desktop) {
-    width: $desktop;
-  }
+  // @media screen and(min-width: $desktop) {
+  //   width: $desktop;
+  // }
 }
