--- a/src/templates/renderPage.hbs
+++ b/src/templates/renderPage.hbs
@@ -1,16 +1,16 @@
 <section class='film-card'>
-    <div class='film-card--img'><img src="" alt=""></div>
-    <div class='film-card-descr'>
-        <h2 class="film-card--title"></h2>
-        <p class="film-card--note">Vote / Votes</p><span>0.0</span><span>0000</span>
-        <p class="film-card--note">Popularity</p><span>000.00</span>
-        <p class="film-card--note">Original Title</p><span></span>
-        <p class="film-card--note">Genre</p><span></span>
-    </div>
-    <div class='film-card-descr'>
-        <h3>ABOUT</h3>
-        <p></p>
-    </div>
-    <button id="addBtn">ADD TO WATCHED</button>
-    <button id="addBtn">ADD TO QUEUE</button>
+  <div class='film-card__img'><img src='' alt='' /></div>
+  <div class='film-card__descr'>
+    <h2 class='film-card__title'></h2>
+    <p class='film-card__note'>Vote / Votes</p><span>0.0</span><span>0000</span>
+    <p class='film-card__note'>Popularity</p><span>000.00</span>
+    <p class='film-card__note'>Original Title</p><span></span>
+    <p class='film-card__note'>Genre</p><span></span>
+  </div>
+  <div class='film-card__descr'>
+    <h3>ABOUT</h3>
+    <p></p>
+  </div>
+  <button id='addBtnWatched'>ADD TO WATCHED</button>
+  <button id='addBtnQueue'>ADD TO QUEUE</button>
 </section>
