add-functional-and-done-My-library
Добавил разметку в header  для My library, подключил файл header-library.js в index.js ,  добавил стили для Library и добавил visually-hidden , Теперь можно нажимать на ссылки в навигации

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -9,10 +9,10 @@
     <nav class="header-nav">
       <ul class="header-nav__list">
         <li class="header-nav__item">
-          <a href="index.html" class="header-nav__link header-nav__link--active">HOME</a>
+          <a id="home-link" class="header-nav__link">HOME</a>
         </li>
         <li class="header-nav__item">
-          <a href="#" class="header-nav__link">MY LIBRARY</a>
+          <a id="library-link" class="header-nav__link">MY LIBRARY</a>
         </li>
       </ul>
     </nav>
@@ -29,5 +29,9 @@
         </svg>
       </button>
     </form>
+    <div class="header__library">
+      <button class="header__library-btn">Watched</button>
+      <button class="header__library-btn">Queue</button>
+    </div>
   </div>
 </header>
