--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,5 +1,5 @@
 .header {
-  min-height: 230px;
+  height: 230px;
   max-width: 100%;
   background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
     url('../images/header-mobile-bg@1x.jpg');
@@ -15,7 +15,7 @@
         url('../images/header-mobile-bg@2x.jpg');
     }
   }
-  @media screen and(min-width: $tablet) {
+  @media screen and(min-width: 768px) {
     background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
       url('../images/header-tablet-bg@1x.jpg');
     @media screen and (min-device-pixel-ratio: 2),
@@ -27,7 +27,7 @@
       }
     }
   }
-  @media screen and(min-width: $desktop) {
+  @media screen and(min-width: 1024px) {
     background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
       url('../images/header-bg@1x.jpg');
     @media screen and (min-device-pixel-ratio: 2),
@@ -39,11 +39,54 @@
       }
     }
   }
+  &--library {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+      url('../images/header-library-mobile-bg@1x.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      .header {
+        background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+          url('../images/header-library-mobile-bg@2x.jpg');
+      }
+    }
+    @media screen and(min-width: 768px) {
+      background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+        url('../images/header-library-tablet-bg@1x.jpg');
+      @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+        .header {
+          background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+            url('../images/header-library-tablet-bg@2x.jpg');
+        }
+      }
+    }
+    @media screen and(min-width: 1024px) {
+      background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+        url('../images/header-library-bg@1x.jpg');
+      @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+        .header {
+          background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+            url('../images/header-library-bg@2x.jpg');
+        }
+      }
+    }
+  }
 }
-.header .container {
+.header .header__container {
   position: relative;
   padding-top: 113px;
   padding-bottom: 97px;
+  &--library {
+    padding-top: 121px;
+    padding-bottom: 65px;
+  }
 }
 .header__logo {
   position: absolute;
@@ -51,7 +94,7 @@
   left: 21px;
   display: flex;
   align-items: center;
-  @media screen and(min-width: $tablet) {
+  @media screen and(min-width: 768px) {
     top: 41px;
     left: 71px;
   }
@@ -60,14 +103,14 @@
   }
   &-text {
     display: none;
-    @media screen and(min-width: $tablet) {
+    @media screen and(min-width: 768px) {
       display: block;
       font-style: normal;
       font-weight: 500;
       font-size: 30px;
       line-height: 1.16;
 
-      color: $primary-text-color;
+      color: #ffffff;
     }
   }
 }
@@ -75,10 +118,10 @@
   position: absolute;
   top: 58px;
   right: 20px;
-  @media screen and(min-width: $tablet) {
+  @media screen and(min-width: 768px) {
     right: 76px;
   }
-  @media screen and(min-width: $desktop) {
+  @media screen and(min-width: 1024px) {
     right: 71px;
   }
   &__list {
@@ -98,7 +141,7 @@
     font-size: 12px;
     line-height: 1.16;
     text-transform: uppercase;
-    color: $primary-text-color;
+    color: #ffffff;
     position: relative;
     &:hover::after,
     &:focus::after {
@@ -113,7 +156,7 @@
       display: block;
       width: 0%;
       height: 3px;
-      background-color: $accent-color;
+      background-color: #ff6b08;
       transition: color, width 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     &--active::after {
@@ -124,7 +167,7 @@
       display: block;
       width: 101%;
       height: 3px;
-      background-color: $accent-color;
+      background-color: #ff6b08;
       transition: color, width 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
   }
@@ -132,24 +175,28 @@
 .header__form {
   position: relative;
   max-width: 280px;
+  height: 20px;
   display: flex;
   margin: 0 auto;
   flex-direction: row;
   align-items: center;
   justify-content: start;
-  border-bottom: 0.5px solid $primary-text-color;
-  @media screen and(min-width: $tablet) {
+  border-bottom: 0.5px solid #ffffff;
+  @media screen and(min-width: 768px) {
     max-width: 336px;
+  }
+  &.visually-hidden {
+    display: none;
   }
   &-input {
     width: 324px;
-    height: 20px;
+    max-height: 20px;
     outline: none;
     border: none;
     font-weight: 400;
     font-size: 14px;
     line-height: 1.14;
-    color: $primary-text-color;
+    color: #ffffff;
     background-color: transparent;
     &::placeholder {
       margin-left: 4px;
@@ -157,16 +204,45 @@
       font-weight: 400;
       font-size: 14px;
       line-height: 1.14;
-      color: $primary-text-color;
+      color: #ffffff;
     }
   }
   &-btn {
-    cursor: pointer;
     position: absolute;
     top: 0;
     right: 0;
     outline: none;
     border: none;
     background-color: transparent;
+  }
+}
+.header__library {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  &-btn {
+    width: 136px;
+    height: 44px;
+    color: #ffffff;
+    background-color: transparent;
+    border: 1px solid #ffffff;
+    border-radius: 5px;
+    padding: 14px 38px 12px 38px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.33;
+    text-transform: uppercase;
+    &:first-child {
+      margin-right: 20px;
+      @media screen and(min-width: 768px) {
+        margin-right: 15px;
+      }
+    }
+    &:hover,
+    &:focus {
+      background-color: #ff6b08;
+      border: 1px solid #ff6b08;
+    }
   }
 }
