--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -4,7 +4,7 @@ $tablet: 768px;
 $desktop: 1024px;
 
 // Common styles
-
+$header-gradient: rgba(0, 0, 0, 0.56);
 $bg-color: #fff;
 $primary-text-color: #fff;
 $secondary-text-color: #000;
