--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -9,3 +9,7 @@ $bg-color: #fff;
 $primary-text-color: #fff;
 $secondary-text-color: #000;
 $accent-color: #ff6b08;
+$grey-primary-color: #545454;
+$grey-secondary-color: #f7f7f7;
+$modal-key-color: #8c8c8c;
+$attention-color: #ff001b;
