--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -15,6 +15,9 @@
     justify-content: center;
     padding-top: 30px;
     padding-bottom: 28px;
+
+    font-size: 16px;
+    line-height: 1.2;
   }
 }
 
@@ -34,4 +37,11 @@
 
 .footer__developers--link {
   display: inline-flex;
+  color: $grey-primary-color;
+  transition: color 500ms cubic-bezier(0.4, 0, 0.2, 1), transform 500ms ease-in-out;
+  text-decoration: underline;
+}
+
+.footer__developers--link:hover {
+  color: $accent-color;
 }
