add img for rendering on HOME, change container

--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -1,18 +1,16 @@
 // for mobile
 .container {
   margin: 0 auto;
-  padding: 0 15px;
-  max-width: 100%;
+  padding: 60px 15px;
+  width: $mobile;
 
-  // // for tablets
+  @media screen and(min-width: $tablet) {
+    width: $tablet;
+  }
 
-  // @media screen and(min-width: $tablet) {
-  //   width: $tablet;
-  // }
+  // for desktop
 
-  // // for desktop
-
-  // @media screen and(min-width: $desktop) {
-  //   width: $desktop;
-  // }
+  @media screen and(min-width: $desktop) {
+    width: $desktop;
+  }
 }
