--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,8 +1,10 @@
 <footer class="footer">
   <p class="footer__copyright">&#169; 2021 | All Rights Reserved |</p>
   <p class="footer__developers">
-    Developed with<span class="heart">
-      &hearts; by <a class="footer__developers--link" href="#"> GoIT Students</a></span
-    >
+    Developed with
+    <svg class="footer__icon-favorite" width="14" height="13">
+      <use href="./images/sprite.svg#icon-favorite"></use>
+    </svg>
+    by <a class="footer__developers--link" href="#"> GoIT Students</a>
   </p>
 </footer>
