--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,6 +1,6 @@
 <div class="backdrop is-hidden" data-modal>
   <section class="film-card">
-    <div class="film-card__img"><img src="./images/Rectangle-desctop.jpg" alt="#" />
+    <div class="film-card__img"><img src="#" alt="#" />
     </div>
 
     <div class="film-card__container">
