Fix styles for trendingFilms and created new main partials

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -67,7 +67,7 @@
     }
   }
 }
-.header .header__container {
+.header__container {
   position: relative;
   padding-top: 113px;
   padding-bottom: 97px;
