--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -1,14 +1,16 @@
-// for mobile
+// Container for mobile
 .container {
   margin: 0 auto;
   padding: 60px 15px;
   width: $mobile;
 
+  // Container for tablet
+
   @media screen and(min-width: $tablet) {
     width: $tablet;
   }
 
-  // for desktop
+  // Container for desktop
 
   @media screen and(min-width: $desktop) {
     width: $desktop;
