--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -5,44 +5,46 @@
   margin-left: -15px;
 
   h2 {
-    color: #000000;
+    color: $secondary-text-color;
     font-family: Roboto;
     font-style: normal;
     font-weight: 500;
     font-size: 12px;
     line-height: 16px;
+    margin-top: 10px;
   }
 
-  p, span{
-     display: inline;
+  p,
+  span {
+    display: inline;
     font-family: Roboto;
     font-style: normal;
     font-weight: 500;
     font-size: 12px;
     line-height: 16px;
-    color: #ff6b08;
+    color: $accent-color;
   }
 }
 
 .gallery-card {
-    display: flex;
-    flex-direction: column;
-    @media screen and (max-width: 768px) {
-      margin-bottom: 20px;
-      width: 100%;
-    }
-  
-    @media screen and (min-width: $tablet) {
-      flex-basis: calc(100% / 2 - 30px);
-      margin-left: 30px;
-      margin-top: 30px;
-    }
-  
-    @media screen and (min-width: $desktop) {
-      flex-basis: calc(100% / 3 - 30px);
-      margin-left: 30px;
-      margin-top: 30px;
-    }
+  display: flex;
+  flex-direction: column;
+  @media screen and (max-width: 768px) {
+    margin-bottom: 20px;
+    width: 100%;
+  }
+
+  @media screen and (min-width: $tablet) {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-left: 30px;
+    margin-top: 30px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    flex-basis: calc(100% / 3 - 30px);
+    margin-left: 30px;
+    margin-top: 30px;
+  }
 }
 
 .gallery-img {
