--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,3 +1,5 @@
 <section class="main">
-  <div class="container" id="container"></div>
+  <div class="container main__container">
+    <div class="gallery" id="container"></div>
+  </div>
 </section>
