Added modal window in footer (without design)
1.  Added modal window in footer (without design);
2.  Added animation to "heart" in footer;
3. Added values of animation to variables.scss

--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -13,3 +13,7 @@ $grey-primary-color: #545454;
 $grey-secondary-color: #f7f7f7;
 $modal-key-color: #8c8c8c;
 $attention-color: #ff001b;
+
+// Animation
+$animation-dur: 500ms;
+$animation-type: cubic-bezier(0.4, 0, 0.2, 1);
