--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -5,6 +5,6 @@
     <svg class="footer__icon-favorite" width="14" height="13">
       <use href="./images/sprite.svg#icon-favorite"></use>
     </svg>
-    by <a class="footer__developers--link" href="#"> GoIT Students</a>
+    by <a data-modal-open class="footer__developers--link" href=""> GoIT Students</a>
   </p>
 </footer>
