--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -34,6 +34,21 @@
 .footer__icon-favorite {
   margin-left: 10px;
   margin-right: 10px;
+  animation: heart 3000ms infinite 1000ms;
+}
+
+@keyframes heart {
+  0% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.5);
+  }
+
+  100% {
+    transform: scale(1);
+  }
 }
 
 .footer__developers--link {
