--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -19,6 +19,7 @@
     <form class="header__form">
       <input
         class="header__form-input"
+        name="searchQuery"
         placeholder="Поиск фильмов"
         autocomplete="off"
         type="text"
