--- a/src/templates/renderTrendingFilms.hbs
+++ b/src/templates/renderTrendingFilms.hbs
@@ -1,6 +1,6 @@
 {{#each this}}
   <div class='gallery-card'>
-    <img class='gallery-img' src='https://image.tmdb.org/t/p/w500{{poster_path}}' alt='{{title}}' />
+    <img loading="lazy" class='gallery-img' src='https://image.tmdb.org/t/p/w500{{poster_path}}' alt='{{title}}' />
     <div class="gallery-card__info">
       <h2>{{title}}</h2>
     <div><p class='genres-block'>
