Change placeholder for input

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -20,7 +20,7 @@
       <input
         class="header__form-input"
         name="searchQuery"
-        placeholder="Поиск фильмов"
+        placeholder="Search movies"
         autocomplete="off"
         type="text"
       />
