--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -34,20 +34,27 @@
 .footer__icon-favorite {
   margin-left: 10px;
   margin-right: 10px;
-  animation: heart 3000ms infinite 1000ms;
+  animation: heartbeat 2000ms infinite;
 }
 
-@keyframes heart {
+@keyframes heartbeat {
   0% {
+    transform: scale(0.75);
+  }
+  20% {
     transform: scale(1);
   }
-
-  50% {
-    transform: scale(1.5);
+  40% {
+    transform: scale(0.75);
   }
-
+  60% {
+    transform: scale(1);
+  }
+  80% {
+    transform: scale(0.75);
+  }
   100% {
-    transform: scale(1);
+    transform: scale(0.75);
   }
 }
 
