Change not avaliavle img

--- a/src/templates/renderTrendingFilms.hbs
+++ b/src/templates/renderTrendingFilms.hbs
@@ -3,7 +3,7 @@
      {{#if poster_path}}
     <img loading="lazy" class='gallery-img' src='https://image.tmdb.org/t/p/w500{{poster_path}}' alt='{{title}}' />
     {{else}}
-     <img data-id={{id}} class="gallery-img" src="../images/not-available.jpg"
+     <img data-id={{id}} class="gallery-img" src="https://dummyimage.com/400x600/c5cbd1/0011ff.jpg&text=NO+IMAGE+AVALIABLE"
         alt="{{title}}" />
       {{/if}}
     <div class="gallery-card__info">
