Done pagination for trending films

--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -2,4 +2,5 @@
   <div class="container main__container">
     <div class="gallery" id="container"></div>
   </div>
+  <div id="tui-pagination-container" class="tui-pagination"></div>
 </section>
