--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -1,11 +1,20 @@
+body.is-hidden {
+  overflow: hidden;
+}
+
 .backdrop {
-  // position: fixed;
+  position: fixed;
   padding: 20px;
   background-color: $header-gradient;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+
+  opacity: 1;
+  transition: opacity $animation-dur $animation-type;
+
+  overflow-y: scroll;
 
   @media screen and(min-width: $tablet) {
     padding: 231px 75px;
@@ -16,18 +25,40 @@
   }
 }
 
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: visible;
+}
+
+.backdrop.is-hidden.film-card {
+  transform: translate(-50%, -50%) scale(0.7);
+}
+
 .film-card {
+  position: absolute;
   padding: 48px 20px 41px 20px;
+  top: 50%;
+  left: 50%;
+
+  padding: 48px 20px 41px 20px;
+  border-radius: 4px;
   background-color: $bg-color;
-  position: relative;
+
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform $animation-dur $animation-type;
 
   @media screen and(min-width: $tablet) {
     padding: 42px 30px 40px 28px;
     display: flex;
+    // width: 348px;
+    // height: 562px;
   }
 
   @media screen and(min-width: $desktop) {
-    padding: 50px 30px 40px;
+    padding: 50px 30px 40px 30px;
+    width: 882px;
+    // height: 568px;
   }
 }
 
@@ -37,16 +68,32 @@
   margin-bottom: 30px;
 
   @media screen and(min-width: $tablet) {
-    min-width: 264px;
+    width: 264px;
     height: 374px;
     margin-right: 32px;
     margin-bottom: 0;
   }
 
   @media screen and(min-width: $desktop) {
-    min-width: 396px;
+    width: 396px;
     height: 478px;
     margin-right: 30px;
+  }
+}
+.film-card__img img {
+  min-width: 240px;
+  height: 356px;
+  object-fit: cover;
+  border-radius: 5px;
+
+  @media screen and(min-width: $tablet) {
+    min-width: 264px;
+    height: 374px;
+  }
+
+  @media screen and(min-width: $desktop) {
+    min-width: 396px;
+    height: 478px;
   }
 }
 
@@ -98,6 +145,13 @@
   color: $secondary-text-color;
   justify-content: center;
   align-items: center;
+}
+
+.film-specification__genres {
+  &:not(:last-child)::after {
+    content: ',';
+    margin-right: 4px;
+  }
 }
 
 .film-specification__vote--light {
@@ -156,12 +210,16 @@
   border-radius: 5px;
   border: 1px solid $secondary-text-color;
 
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color $animation-dur $animation-type;
+  transition: border $animation-dur $animation-type;
+  transition: background-color $animation-dur $animation-type;
 
   @media screen and(min-width: $tablet) {
     width: 125px;
+  }
+
+  @media screen and(min-width: $desktop) {
+    width: 136px;
   }
 
   &:hover,
@@ -175,27 +233,54 @@
 #addBtnWatched {
   margin-right: 15px;
   padding: 14px 8px 12px 8px;
+
+  @media screen and(min-width: $tablet) {
+    padding: 14px 9px 12px 9px;
+  }
+  @media screen and(min-width: $desktop) {
+    padding: 14px 10px 12px 10px;
+  }
 }
 
 #addBtnQueue {
   padding: 14px 7px 12px 7px;
+
+  @media screen and(min-width: $tablet) {
+    padding: 14px 7px 12px 7px;
+  }
+  @media screen and(min-width: $desktop) {
+    padding: 14px 8px 12px 8px;
+  }
 }
 
-.modal-icon {
+.close-modal__button {
   position: absolute;
   top: 10px;
   right: 10px;
   width: 30px;
   height: 30px;
+  border: none;
+  background-color: #fff;
+  border-radius: 50%;
 
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color $animation-dur $animation-type;
+  &:hover,
+  &:focus {
+    background-color: $accent-color;
+  }
+}
+
+.modal-icon {
+  position: absolute;
+  top: -1px;
+  right: 1px;
+  width: 30px;
+  height: 30px;
+
+  transition: fill $animation-dur $animation-type;
 
   &:hover,
   &:focus {
     fill: $accent-color;
   }
-}
-
-.close-modal__button {
-  border: none;
 }
