--- a/src/templates/renderModalFilmPage.hbs
+++ b/src/templates/renderModalFilmPage.hbs
@@ -32,6 +32,10 @@
           </ul>
           {{/each}}
         </li>
+        <li class='film-specification__item'>
+          <p class='film-specification__name'>Trailer</p>
+          <iframe id ="trailer" src="" frameborder="0"></iframe>
+        </li>
       </ul>
     
 
