--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -3,4 +3,6 @@
     <div class="gallery" id="container"></div>
   </div>
   <div id="tui-pagination-container" class="tui-pagination"></div>
+  <div id="tui-pagination-container-search" class="tui-pagination"></div>
 </section>
+
