Add-functional-for-btns-in-library
Добавил пару рефов, добавил функционал для кнопок в библиотеке,
добавил рендер карточек фильмов добавленных в соответствующий сторедж, добавил отрисовку трендовых фильмов при нажатии на Домашнюю страницу и на логотип.

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,6 @@
 <header class="header">
   <div class="container header__container">
-    <a class="header__logo" href="index.html">
+    <a class="header__logo">
       <svg class="header__logo-icon" width="24" height="24">
         <use href="./images/sprite.svg#icon-film"></use>
       </svg>
@@ -31,8 +31,8 @@
       </button>
     </form>
     <div class="header__library">
-      <button class="header__library-btn">Watched</button>
-      <button class="header__library-btn">Queue</button>
+      <button id="watched-btn" class="header__library-btn">Watched</button>
+      <button id="queue-btn" class="header__library-btn">Queue</button>
     </div>
   </div>
 </header>
