--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -240,6 +240,10 @@
         margin-right: 15px;
       }
     }
+    &.active {
+      background-color: $accent-color;
+      border: 1px solid $accent-color;
+    }
   }
   &.visually-hidden {
     display: none;
