Added the content to modal window in footer
1. Added the content to modal window in footer;
2. Added "font-awesome" library;
3.  Changed Function Expression to Function Declaration in "developers.js;"
4. Changed animation-duration from 500ms to 300ms;
5. Changed team name in footer.

--- a/src/partials/developers.html
+++ b/src/partials/developers.html
@@ -1,10 +1,132 @@
-<section class="backdrop-developers is-hidden" data-modal>
+<section class="developers backdrop-developers is-hidden" data-modal>
   <div class="lightbox__overlay"></div>
   <div class="modal">
-    <button type="button" class="modal__close" data-modal-close>
-      <svg width="30" height="30">
-        <use href="./images/sprite.svg#icon-close"></use>
+    <button class="modal__close" data-modal-close>
+      <svg class="modal-icon" width="14" height="14">
+        <path
+          fill="none"
+          stroke-width="2.133"
+          stroke="#000"
+          d="M8.533 8.533l14.933 14.933M8.533 23.467L23.466 8.534"
+        />
       </svg>
     </button>
+    <div class="developers-container">
+      <h2 class="developers__title">Developers</h2>
+      <ul class="developers__list">
+        <li class="developers__item">
+          <button class="developers__link">
+            <a
+              class="developers__link--github"
+              href="https://github.com/vmorgunov"
+              target="_blank"
+              rel="noreferrer noopener"
+              ><i class="fab fa-github-square"></i
+            ></a>
+          </button>
+          <div class="developers__card">
+            <img class="developers__image" src="./images/Vitalik.jpg" alt="Vitalii Morgunov" />
+          </div>
+          <div class="developers__content">
+            <h3 class="developers__member">Vitalii Morgunov</h3>
+            <p class="developers__position">Team Lead</p>
+          </div>
+        </li>
+        <li class="developers__item">
+          <button class="developers__link">
+            <a
+              class="developers__link--github"
+              href="https://github.com/Kseniia-FS"
+              target="_blank"
+              rel="noreferrer noopener"
+              ><i class="fab fa-github-square"></i
+            ></a>
+          </button>
+          <div class="developers__card">
+            <img
+              class="developers__image developers__image--rotate"
+              src="./images/Ksenia.jpg"
+              alt="Ksenia Kovbasuk"
+            />
+          </div>
+          <div class="developers__content">
+            <h3 class="developers__member">Ksenia Kovbasuk</h3>
+            <p class="developers__position">Senior Google Researcher</p>
+          </div>
+        </li>
+        <li class="developers__item">
+          <button class="developers__link">
+            <a
+              class="developers__link--github"
+              href="https://github.com/lamewolf"
+              target="_blank"
+              rel="noreferrer noopener"
+              ><i class="fab fa-github-square"></i
+            ></a>
+          </button>
+          <div class="developers__card">
+            <img class="developers__image" src="./images/Yaroslav.jpg" alt="Yaroslav Tkach" />
+          </div>
+          <div class="developers__content">
+            <h3 class="developers__member">Yaroslav Tkach</h3>
+            <p class="developers__position">Scrum master</p>
+          </div>
+        </li>
+        <li class="developers__item">
+          <button class="developers__link">
+            <a
+              class="developers__link--github"
+              href="https://github.com/coreks"
+              target="_blank"
+              rel="noreferrer noopener"
+              ><i class="fab fa-github-square"></i
+            ></a>
+          </button>
+          <div class="developers__card">
+            <img class="developers__image" src="./images/Aleksei.jpg" alt="Aleksei Sobchenko" />
+          </div>
+          <div class="developers__content">
+            <h3 class="developers__member">Aleksei Sobchenko</h3>
+            <p class="developers__position">Front-end developer</p>
+          </div>
+        </li>
+        <li class="developers__item">
+          <button class="developers__link">
+            <a
+              class="developers__link--github"
+              href="https://github.com/Maxim-Savchuk"
+              target="_blank"
+              rel="noreferrer noopener"
+              ><i class="fab fa-github-square"></i
+            ></a>
+          </button>
+          <div class="developers__card">
+            <img class="developers__image" src="./images/Max.jpg" alt="Max Savchuk" />
+          </div>
+          <div class="developers__content">
+            <h3 class="developers__member">Max Savchuk</h3>
+            <p class="developers__position">Front-end developer</p>
+          </div>
+        </li>
+        <li class="developers__item">
+          <button class="developers__link">
+            <a
+              class="developers__link--github"
+              href="https://github.com/ihorkovalenko27"
+              target="_blank"
+              rel="noreferrer noopener"
+              ><i class="fab fa-github-square"></i
+            ></a>
+          </button>
+          <div class="developers__card">
+            <img class="developers__image" src="./images/Igor.jpg" alt="Igor Kovalenko" />
+          </div>
+          <div class="developers__content">
+            <h3 class="developers__member">Igor Kovalenko</h3>
+            <p class="developers__position">Front-end developer</p>
+          </div>
+        </li>
+      </ul>
+    </div>
   </div>
 </section>
