--- a/src/sass/components/_developers.scss
+++ b/src/sass/components/_developers.scss
@@ -8,7 +8,7 @@ body.modal-open {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: transparent;
+  background-color: $header-gradient;
   transition: opacity $animation-dur $animation-type;
   opacity: 1;
   overflow-y: scroll;
@@ -23,7 +23,7 @@ body.modal-open {
 
 .backdrop-developers.is-hidden .modal {
   opacity: 0;
-  transform: translate(-50%, -50%) scale(0.9);
+  transform: translate(-50%, -50%) scale(0.7);
 }
 
 .lightbox__overlay {
@@ -43,45 +43,224 @@ body.modal-open {
   transform: translate(-50%, -50%) scale(1);
   transition: opacity $animation-dur $animation-type, transform $animation-dur $animation-type;
   width: 100%;
-  height: 609px;
+  height: 575px;
   padding: 40px 40px;
   overflow-y: auto;
 
-  background-color: $primary-text-color;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+  background-color: $bg-color;
   border-radius: 4px;
   @media screen and (min-width: $tablet) {
-    width: 450px;
+    width: 768px;
   }
   @media screen and (min-width: $desktop) {
-    width: 528px;
-    height: 581px;
+    width: 1024px;
+    height: 768px;
+    padding: 15px 40px;
   }
 }
 
 .modal__close {
   position: absolute;
+  top: 10px;
+  right: 15px;
   width: 30px;
   height: 30px;
-  top: 8px;
-  right: 8px;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  cursor: pointer;
-
-  background: $primary-text-color;
-  fill: #000000;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  box-sizing: border-box;
+  border: none;
+  background-color: $primary-text-color;
   border-radius: 50%;
-  transition: fill $animation-dur $animation-type;
 
+  transition: background-color $animation-dur $animation-type;
+  cursor: pointer;
   &:focus,
   &:hover {
+    background-color: $accent-color;
+  }
+}
+
+.modal-icon {
+  position: absolute;
+  top: -1px;
+  right: 1px;
+  width: 30px;
+  height: 30px;
+
+  transition: fill $animation-dur $animation-type;
+
+  &:hover,
+  &:focus {
     fill: $accent-color;
   }
+}
+
+.developers__title {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 1.2;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin-bottom: 15px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border-radius: 35px;
+  color: $secondary-text-color;
+  background-color: $primary-text-color;
+  @media screen and (min-width: $desktop) {
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 1.2;
+    margin-bottom: 5px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+}
+
+.developers__card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 10px;
+
+  @media screen and (min-width: $desktop) {
+    padding-top: 5px;
+  }
+}
+
+.developers__image {
+  max-width: 288px;
+  border-image: 50%;
+  border-radius: 50%;
+
+  @media screen and (min-width: $tablet) {
+    width: 288px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    width: 200px;
+  }
+}
+
+.developers__image.developers__image--rotate {
+  transform: rotate(-30deg);
+}
+
+.developers__member {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 28px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+  color: $secondary-text-color;
+  text-align: center;
+  margin-top: 10px;
+}
+
+.developers__position {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+  color: $grey-primary-color;
+  text-align: center;
+  margin-top: 10px;
+  @media screen and (min-width: $tablet) {
+    font-size: 20px;
+    margin-bottom: 20px;
+  }
+}
+
+.developers__list {
+  @media screen and (min-width: $tablet) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -40px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    margin-left: -18px;
+  }
+}
+
+.developers__item {
+  position: relative;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+  margin-bottom: 30px;
+  padding-bottom: 30px;
+  border-radius: 4px;
+  transition: all 250ms cubic-bezier(0.17, 0.67, 0.83, 0.67) 0s;
+
+  @media screen and (min-width: $tablet) {
+    width: 320px;
+    margin-left: 44px;
+    margin-bottom: 30px;
+    padding-bottom: 10px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    width: 302px;
+    margin-left: 18px;
+    margin-bottom: 40px;
+  }
+}
+
+.developers__item:hover {
+  @media screen and (min-width: $tablet) {
+    box-shadow: 0px 1px 1px rgb(0 0 0 / 12%), 0px 4px 4px rgb(0 0 0 / 6%),
+      1px 4px 6px rgb(0 0 0 / 16%);
+    transform: scale(1.06);
+  }
+}
+
+.developers__item:nth-child(-n + 3) {
+  @media screen and (min-width: $desktop) {
+    margin-top: 5px;
+  }
+}
+
+.developers__item:nth-child(n + 4) {
+  @media screen and (min-width: $desktop) {
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+}
+
+.developers__item > .developers__link {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.developers__link {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 35px;
+  line-height: 1.87;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: $secondary-text-color;
+  background-color: $primary-text-color;
+  border: none;
+  cursor: pointer;
+  transition: $animation-dur $animation-type;
+}
+
+.developers__link--github {
+  color: $secondary-text-color;
+  border: none;
+  transition: $animation-dur $animation-type;
+}
+
+.developers__link--github:hover {
+  color: $accent-color;
+}
+.fa-github-square {
+  display: block;
+  border: none;
+}
+
+.developers__content {
+  text-align: center;
 }
