Fixed modal window in footer
1. Fixed modal window in footer;
2. Fixed close button in modal window;
3. Help from Max in finding and fixing bugs.

--- a/src/partials/developers.html
+++ b/src/partials/developers.html
@@ -1,8 +1,7 @@
 <section class="developers backdrop-developers is-hidden" data-modal>
-  <div class="lightbox__overlay"></div>
   <div class="modal">
-    <button class="modal__close" data-modal-close>
-      <svg class="modal-icon" width="14" height="14">
+    <button class="modal__close-footer-btn" data-modal-close>
+      <svg class="modal__icon-footer" width="14" height="14">
         <path
           fill="none"
           stroke-width="2.133"
@@ -13,8 +12,8 @@
     </button>
     <div class="developers-container">
       <h2 class="developers__title">Developers</h2>
-      <ul class="developers__list">
-        <li class="developers__item">
+      <div class="developers-gallery">
+        <div class="developers-gallery__item">
           <button class="developers__link">
             <a
               class="developers__link--github"
@@ -31,8 +30,8 @@
             <h3 class="developers__member">Vitalii Morgunov</h3>
             <p class="developers__position">Team Lead</p>
           </div>
-        </li>
-        <li class="developers__item">
+        </div>
+        <li class="developers-gallery__item">
           <button class="developers__link">
             <a
               class="developers__link--github"
@@ -54,7 +53,7 @@
             <p class="developers__position">Senior Google Researcher</p>
           </div>
         </li>
-        <li class="developers__item">
+        <li class="developers-gallery__item">
           <button class="developers__link">
             <a
               class="developers__link--github"
@@ -72,7 +71,7 @@
             <p class="developers__position">Scrum master</p>
           </div>
         </li>
-        <li class="developers__item">
+        <li class="developers-gallery__item">
           <button class="developers__link">
             <a
               class="developers__link--github"
@@ -90,7 +89,7 @@
             <p class="developers__position">Front-end developer</p>
           </div>
         </li>
-        <li class="developers__item">
+        <li class="developers-gallery__item">
           <button class="developers__link">
             <a
               class="developers__link--github"
@@ -108,7 +107,7 @@
             <p class="developers__position">Front-end developer</p>
           </div>
         </li>
-        <li class="developers__item">
+        <div class="developers-gallery__item">
           <button class="developers__link">
             <a
               class="developers__link--github"
@@ -125,8 +124,8 @@
             <h3 class="developers__member">Igor Kovalenko</h3>
             <p class="developers__position">Front-end developer</p>
           </div>
-        </li>
-      </ul>
+        </div>
+      </div>
     </div>
   </div>
 </section>
