--- a/src/sass/components/_developers.scss
+++ b/src/sass/components/_developers.scss
@@ -26,15 +26,6 @@ body.modal-open {
   transform: translate(-50%, -50%) scale(0.7);
 }
 
-.lightbox__overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: transparent;
-}
-
 .modal {
   position: absolute;
   opacity: 1;
@@ -43,41 +34,51 @@ body.modal-open {
   transform: translate(-50%, -50%) scale(1);
   transition: opacity $animation-dur $animation-type, transform $animation-dur $animation-type;
   width: 100%;
-  height: 575px;
-  padding: 40px 40px;
+  height: 100%;
+  padding: 20px 40px;
   overflow-y: auto;
 
   background-color: $bg-color;
   border-radius: 4px;
+
+  @media screen and (min-width: 748px) {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+
   @media screen and (min-width: $tablet) {
     width: 768px;
+    top: 50%;
+    height: 100vh;
+    padding: 15px 70px;
   }
   @media screen and (min-width: $desktop) {
     width: 1024px;
-    height: 768px;
-    padding: 15px 40px;
+    height: 630px;
   }
 }
 
-.modal__close {
+.modal__close-footer-btn {
   position: absolute;
   top: 10px;
-  right: 15px;
+  right: 10px;
   width: 30px;
   height: 30px;
   border: none;
-  background-color: $primary-text-color;
+  background-color: #fff;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+
   border-radius: 50%;
 
   transition: background-color $animation-dur $animation-type;
-  cursor: pointer;
-  &:focus,
-  &:hover {
+  &:hover,
+  &:focus {
     background-color: $accent-color;
   }
 }
 
-.modal-icon {
+.modal__icon-footer {
   position: absolute;
   top: -2px;
   right: 0px;
@@ -90,6 +91,10 @@ body.modal-open {
   &:focus {
     fill: $accent-color;
   }
+}
+
+.developers-container {
+  margin: 0 auto;
 }
 
 .developers__title {
@@ -107,9 +112,9 @@ body.modal-open {
   background-color: $primary-text-color;
   @media screen and (min-width: $desktop) {
     font-weight: normal;
-    font-size: 24px;
+    font-size: 20px;
     line-height: 1.2;
-    margin-bottom: 5px;
+    margin-bottom: 25px;
     padding-top: 0px;
     padding-bottom: 0px;
   }
@@ -127,16 +132,13 @@ body.modal-open {
 }
 
 .developers__image {
-  max-width: 288px;
+  max-width: 100%;
+  height: 200px;
   border-image: 50%;
   border-radius: 50%;
 
-  @media screen and (min-width: $tablet) {
-    width: 288px;
-  }
-
   @media screen and (min-width: $desktop) {
-    width: 200px;
+    height: 150px;
   }
 }
 
@@ -153,6 +155,10 @@ body.modal-open {
   color: $secondary-text-color;
   text-align: center;
   margin-top: 10px;
+
+  @media screen and (min-width: $desktop) {
+    font-size: 20px;
+  }
 }
 
 .developers__position {
@@ -168,44 +174,57 @@ body.modal-open {
     font-size: 20px;
     margin-bottom: 20px;
   }
-}
-
-.developers__list {
-  @media screen and (min-width: $tablet) {
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: -40px;
-  }
 
   @media screen and (min-width: $desktop) {
-    margin-left: -18px;
+    font-size: 16px;
+    margin-bottom: 0px;
   }
 }
 
-.developers__item {
+.developers-gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-left: -30px;
+  margin-top: -30px;
+  @media screen and (min-width: $tablet) {
+    margin-left: -30px;
+    margin-top: -30px;
+  }
+}
+
+.developers-gallery__item {
+  display: flex;
+  flex-direction: column;
+  max-width: 100%;
+  width: 320px;
   position: relative;
+  // margin-bottom: 30px;
+  margin-left: 30px;
+  margin-top: 30px;
+  padding-bottom: 20px;
+  border-radius: 4px;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
-  margin-bottom: 30px;
-  padding-bottom: 30px;
-  border-radius: 4px;
   transition: all 250ms cubic-bezier(0.17, 0.67, 0.83, 0.67) 0s;
 
   @media screen and (min-width: $tablet) {
-    width: 320px;
-    margin-left: 44px;
-    margin-bottom: 30px;
-    padding-bottom: 10px;
+    flex-basis: calc(100% / 2 - 30px);
+    margin-left: 30px;
+    margin-top: 30px;
+    margin-bottom: 0;
   }
 
   @media screen and (min-width: $desktop) {
-    width: 302px;
-    margin-left: 18px;
-    margin-bottom: 40px;
+    flex-basis: calc(100% / 3 - 30px);
+    // margin-left: 40px;
+    // margin-top: 20px;
+    height: 250px;
+    padding-bottom: 0px;
   }
 }
 
-.developers__item:hover {
+.developers-gallery__item:hover {
   @media screen and (min-width: $tablet) {
     box-shadow: 0px 1px 1px rgb(0 0 0 / 12%), 0px 4px 4px rgb(0 0 0 / 6%),
       1px 4px 6px rgb(0 0 0 / 16%);
@@ -213,20 +232,7 @@ body.modal-open {
   }
 }
 
-.developers__item:nth-child(-n + 3) {
-  @media screen and (min-width: $desktop) {
-    margin-top: 5px;
-  }
-}
-
-.developers__item:nth-child(n + 4) {
-  @media screen and (min-width: $desktop) {
-    margin-top: 0px;
-    margin-bottom: 0px;
-  }
-}
-
-.developers__item > .developers__link {
+.developers-gallery__item > .developers__link {
   position: absolute;
   top: 10px;
   right: 10px;
