--- a/src/templates/renderFilmsForLibrary.hbs
+++ b/src/templates/renderFilmsForLibrary.hbs
@@ -9,8 +9,8 @@
     <div class="gallery-card__info">
       <h2>{{title}}</h2>
     <div><p class='genres-block'>
-      
-    <p>{{genre_ids}} </p><span>| {{release_date}}</span></div>
+      {{#each genres}}
+    <p>{{this.name}} </p>{{/each}}<span>| {{release_date}}</span></div>
     </div>
   </div>
 {{/each}}
