--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,8 +1,17 @@
 <section class="main">
+  <div
+    class="main-btncontainer"
+    style="display: flex; align-items: center; justify-content: center"
+  >
+    <p class="main-title">What's new?</p>
+    <div class="main-btn">
+      <button id="dayTrend" style="width: 90px">For day</button>
+      <button id="weekTrend" style="width: 90px">For week</button>
+    </div>
+  </div>
   <div class="container main__container">
     <div class="gallery" id="container"></div>
   </div>
   <div id="tui-pagination-container" class="tui-pagination"></div>
   <div id="tui-pagination-container-search" class="tui-pagination"></div>
 </section>
-
