--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -249,3 +249,33 @@
     display: none;
   }
 }
+
+.main-title {
+  color: #000000;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.16;
+  text-transform: uppercase;
+  text-align: center;
+  margin-right: 35px;
+}
+
+.main-btn {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+.main-btn button {
+  padding: 5px 0;
+  &:first-child {
+    margin-right: 20px;
+  }
+  &:hover {
+    background-color: $accent-color;
+  }
+  &:focus {
+    background-color: $accent-color;
+  }
+}
