Сode refactoring in modal window in footer
Сode refactoring in modal window in footer

--- a/src/partials/developers.html
+++ b/src/partials/developers.html
@@ -14,7 +14,7 @@
       <h2 class="developers__title">Developers</h2>
       <div class="developers-gallery">
         <div class="developers-gallery__item">
-          <button class="developers__link">
+          <p class="developers__link">
             <a
               class="developers__link--github"
               href="https://github.com/vmorgunov"
@@ -22,7 +22,7 @@
               rel="noreferrer noopener"
               ><i class="fab fa-github-square"></i
             ></a>
-          </button>
+          </p>
           <div class="developers__card">
             <img class="developers__image" src="./images/Vitalik.jpg" alt="Vitalii Morgunov" />
           </div>
@@ -31,8 +31,8 @@
             <p class="developers__position">Team Lead</p>
           </div>
         </div>
-        <li class="developers-gallery__item">
-          <button class="developers__link">
+        <div class="developers-gallery__item">
+          <p class="developers__link">
             <a
               class="developers__link--github"
               href="https://github.com/Kseniia-FS"
@@ -40,7 +40,7 @@
               rel="noreferrer noopener"
               ><i class="fab fa-github-square"></i
             ></a>
-          </button>
+          </p>
           <div class="developers__card">
             <img
               class="developers__image developers__image--rotate"
@@ -52,9 +52,9 @@
             <h3 class="developers__member">Ksenia Kovbasuk</h3>
             <p class="developers__position">Senior Google Researcher</p>
           </div>
-        </li>
-        <li class="developers-gallery__item">
-          <button class="developers__link">
+        </div>
+        <div class="developers-gallery__item">
+          <p class="developers__link">
             <a
               class="developers__link--github"
               href="https://github.com/lamewolf"
@@ -62,7 +62,7 @@
               rel="noreferrer noopener"
               ><i class="fab fa-github-square"></i
             ></a>
-          </button>
+          </p>
           <div class="developers__card">
             <img class="developers__image" src="./images/Yaroslav.jpg" alt="Yaroslav Tkach" />
           </div>
@@ -70,9 +70,9 @@
             <h3 class="developers__member">Yaroslav Tkach</h3>
             <p class="developers__position">Scrum master</p>
           </div>
-        </li>
-        <li class="developers-gallery__item">
-          <button class="developers__link">
+        </div>
+        <div class="developers-gallery__item">
+          <p class="developers__link">
             <a
               class="developers__link--github"
               href="https://github.com/coreks"
@@ -80,7 +80,7 @@
               rel="noreferrer noopener"
               ><i class="fab fa-github-square"></i
             ></a>
-          </button>
+          </p>
           <div class="developers__card">
             <img class="developers__image" src="./images/Aleksei.jpg" alt="Aleksei Sobchenko" />
           </div>
@@ -88,9 +88,9 @@
             <h3 class="developers__member">Aleksei Sobchenko</h3>
             <p class="developers__position">Front-end developer</p>
           </div>
-        </li>
-        <li class="developers-gallery__item">
-          <button class="developers__link">
+        </div>
+        <div class="developers-gallery__item">
+          <p class="developers__link">
             <a
               class="developers__link--github"
               href="https://github.com/Maxim-Savchuk"
@@ -98,7 +98,7 @@
               rel="noreferrer noopener"
               ><i class="fab fa-github-square"></i
             ></a>
-          </button>
+          </p>
           <div class="developers__card">
             <img class="developers__image" src="./images/Max.jpg" alt="Max Savchuk" />
           </div>
@@ -106,9 +106,9 @@
             <h3 class="developers__member">Max Savchuk</h3>
             <p class="developers__position">Front-end developer</p>
           </div>
-        </li>
+        </div>
         <div class="developers-gallery__item">
-          <button class="developers__link">
+          <p class="developers__link">
             <a
               class="developers__link--github"
               href="https://github.com/ihorkovalenko27"
@@ -116,7 +116,7 @@
               rel="noreferrer noopener"
               ><i class="fab fa-github-square"></i
             ></a>
-          </button>
+          </p>
           <div class="developers__card">
             <img class="developers__image" src="./images/Igor.jpg" alt="Igor Kovalenko" />
           </div>
