--- a/src/partials/developers.html
+++ b/src/partials/developers.html
@@ -50,7 +50,7 @@
           </div>
           <div class="developers__content">
             <h3 class="developers__member">Ksenia Kovbasuk</h3>
-            <p class="developers__position">Senior Google Researcher</p>
+            <p class="developers__position">Java Script Developer</p>
           </div>
         </div>
         <div class="developers-gallery__item">
