--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,3 +8,4 @@
 @import './components/gallery';
 @import './components/modal';
 @import './components/developers';
+@import './components/pagination';
