Added styles for buttons
1.  Added styles for buttons in the gallery;
2. Added some variables to variables.scss ;
3. Changed pseudoelement for links in navigation.

--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -233,6 +233,7 @@ body.is-hidden {
   border: 1px solid $secondary-text-color;
 
   transition: all $animation-dur $animation-type;
+  background-color: transparent;
 
   @media screen and(min-width: $tablet) {
     width: 125px;
