--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -17,3 +17,8 @@ $attention-color: #ff001b;
 // Animation
 $animation-dur: 300ms;
 $animation-type: cubic-bezier(0.4, 0, 0.2, 1);
+
+//Shadow
+$box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+  1px 4px 6px rgba(0, 0, 0, 0.16);
+$text-shadow: 5px 7px 8px rgba(0, 0, 0, 0.4);
