--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -5,8 +5,8 @@
   >
     <p class="main-title">What's new?</p>
     <div class="main-btn">
-      <button id="dayTrend" style="width: 90px">For day</button>
-      <button id="weekTrend" style="width: 90px">For week</button>
+      <button id="dayTrend" style="width: 90px">Top of the DAY</button>
+      <button id="weekTrend" style="width: 90px">Top of the WEEK</button>
     </div>
   </div>
   <div class="container main__container">
