--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -133,30 +133,31 @@
     position: relative;
     &:hover::after,
     &:focus::after {
-      width: 101%;
-      bottom: -1px;
+      opacity: 1;
+      bottom: 0;
     }
     &::after {
       content: '';
       position: absolute;
       left: 0;
-      bottom: -1px;
+      bottom: 0;
       display: block;
-      width: 0%;
+      width: 100%;
+      opacity: 0;
       height: 3px;
       background-color: $accent-color;
-      transition: color, width 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      transition: color, opacity 300ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     &--active::after {
       content: '';
       position: absolute;
       left: 0;
-      bottom: -1px;
+      bottom: 0;
       display: block;
-      width: 101%;
+      opacity: 1;
       height: 3px;
       background-color: $accent-color;
-      transition: color, width 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      transition: color, opacity 300ms cubic-bezier(0.4, 0, 0.2, 1);
     }
   }
 }
@@ -247,35 +248,5 @@
   }
   &.visually-hidden {
     display: none;
-  }
-}
-
-.main-title {
-  color: #000000;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.16;
-  text-transform: uppercase;
-  text-align: center;
-  margin-right: 35px;
-}
-
-.main-btn {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 20px;
-  margin-top: 20px;
-}
-.main-btn button {
-  padding: 5px 0;
-  &:first-child {
-    margin-right: 20px;
-  }
-  &:hover {
-    background-color: $accent-color;
-  }
-  &:focus {
-    background-color: $accent-color;
   }
 }
