--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -3,7 +3,7 @@
     class="main-btncontainer"
     style="display: flex; align-items: center; justify-content: center"
   >
-    <p class="main-title">What's new?</p>
+    <h2 class="main-title">What's new?</h2>
     <div class="main-btn">
       <button id="dayTrend" style="width: 90px">For day</button>
       <button id="weekTrend" style="width: 90px">For week</button>
